# buat-screening-cli

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/agent/: core.py  parser.py
app/cli/: formatter.py  main.py
app/config/: settings.py
app/data/: idx_stocks.json
app/indicators/: engine.py
app/models/: analysis.py  stock.py
app/parser/: intent.py
app/prompts/: analysis.md  comparison.md  screening.md  system.md
app/router/: engine.py
app/screeners/: engine.py
app/services/: llm.py  openrouter.py  stock_list.py
app/tools/: __init__.py  base.py  idx.py  registry.py  yahoo_finance.py
app/utils/: logging.py
docs/superpowers/specs/: 2026-07-23-ai-provider-migration-design.md
guide/: 01_PRD.md  02_Architecture_and_Technical_Design(2).md  02_Architecture_and_Technical_Design.md  03_Task_Breakdown_Sprint.md  04_AI_Agent_Specification.md  05_AGENTS.md  06_AI_Agent_Evolution_Roadmap.md  daftar_emiten_idx_2026.md
tests/: test_agent.py  test_cli.py  test_config.py  test_formatter.py  test_idx_provider.py  test_indicators.py  test_integration.py  test_multi_provider.py  test_parser.py  test_registry.py  test_router.py  test_screeners.py  test_stock_list.py  test_yahoo_finance.py
