[project]
name = "screening-cli"
version = "0.1.0"
description = "AI-powered CLI for Indonesian stock screening and analysis"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
screening = "app.cli.main:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
